# pdf-extraction-gemini

./: .env.example  main.py  pyproject.toml
